--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pandas==1.3.5
-scikit-learn==1.3.0
-flask==2.3.2 
-numpy==1.25.0
-gunicorn==19.7.1
-flask-cors==4.0.0
+scikit-learn==1.0.2
+flask
+numpy
+gunicorn
+flask-cors
